# libluksde

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libluksde-wiki.ini  libluksde.ini  libluksde.pc.in  libluksde.spec.in  setup.cfg.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  synctestdata.ps1  synctestdata.sh  tox.ini
.travis/: runtests.sh  script.sh
common/: byte_stream.h  common.h  config_borlandc.h  config_msc.h  config_winapi.h  file_stream.h  memory.h  narrow_string.h  system_string.h  types.h.in  wide_string.h
documentation/: Linux Unified Key Setup (LUKS) Disk Encryption format.asciidoc
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libluksde.h.in
include/libluksde/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libluksde/: Makefile.am  libluksde.c  libluksde.rc.in  libluksde_codepage.h  libluksde_debug.c  libluksde_debug.h  libluksde_definitions.h.in  libluksde_diffuser.c  libluksde_diffuser.h  libluksde_encryption.c  libluksde_encryption.h  libluksde_encryption_context.c  libluksde_encryption_context.h  libluksde_error.c  libluksde_error.h  libluksde_extern.h  libluksde_io_handle.c  libluksde_io_handle.h  libluksde_key_slot.c  libluksde_key_slot.h  libluksde_libbfio.h  libluksde_libcaes.h  libluksde_libcdata.h  libluksde_libcerror.h  libluksde_libclocale.h  libluksde_libcnotify.h  libluksde_libcstring.h  libluksde_libcthreads.h  libluksde_libfcache.h  libluksde_libfcrypto.h  libluksde_libfdata.h  libluksde_libfguid.h  libluksde_libhmac.h  libluksde_libuna.h  libluksde_notify.c  libluksde_notify.h  libluksde_password.c  libluksde_password.h  libluksde_sector_data.c  libluksde_sector_data.h  (+12 more)
luksdetools/: Makefile.am  info_handle.c  info_handle.h  luksdeinfo  luksdeinfo.c  luksdemount  luksdemount.c  luksdeoutput.c  luksdeoutput.h  luksdetools_getopt.c  luksdetools_getopt.h  luksdetools_i18n.h  luksdetools_input.c  luksdetools_input.h  luksdetools_libbfio.h  luksdetools_libcdata.h  luksdetools_libcerror.h  luksdetools_libclocale.h  luksdetools_libcnotify.h  luksdetools_libcpath.h  luksdetools_libcsplit.h  luksdetools_libcstring.h  luksdetools_libcsystem.h  luksdetools_libfguid.h  luksdetools_libluksde.h  luksdetools_libuna.h  luksdetools_output.c  luksdetools_output.h  luksdetools_signal.c  luksdetools_signal.h  luksdetools_unused.h  mount_dokan.c  mount_dokan.h  mount_file_entry.c  mount_file_entry.h  mount_file_system.c  mount_file_system.h  mount_fuse.c  mount_fuse.h  mount_handle.c  (+1 more)
m4/: libcrypto.m4  libfcrypto.m4  wincrypt.m4
manuals/: Makefile.am  libluksde.3  luksdeinfo.1  luksdemount.1
msvscpp/: Makefile.am  libluksde.sln
msvscpp/dokan/: dokan.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libfcrypto/: libfcrypto.vcproj
msvscpp/libluksde/: libluksde.vcproj
msvscpp/luksde_test_diffuser/: luksde_test_diffuser.vcproj
msvscpp/luksde_test_encryption_context/: luksde_test_encryption_context.vcproj
msvscpp/luksde_test_error/: luksde_test_error.vcproj
msvscpp/luksde_test_get_version/: luksde_test_get_version.vcproj
msvscpp/luksde_test_io_handle/: luksde_test_io_handle.vcproj
msvscpp/luksde_test_key_slot/: luksde_test_key_slot.vcproj
msvscpp/luksde_test_notify/: luksde_test_notify.vcproj
msvscpp/luksde_test_open_close/: luksde_test_open_close.vcproj
msvscpp/luksde_test_password/: luksde_test_password.vcproj
msvscpp/luksde_test_read/: luksde_test_read.vcproj
msvscpp/luksde_test_sector_data/: luksde_test_sector_data.vcproj
msvscpp/luksde_test_sector_data_vector/: luksde_test_sector_data_vector.vcproj
msvscpp/luksde_test_seek/: luksde_test_seek.vcproj
msvscpp/luksde_test_support/: luksde_test_support.vcproj
msvscpp/luksde_test_tools_info_handle/: luksde_test_tools_info_handle.vcproj
msvscpp/luksde_test_tools_output/: luksde_test_tools_output.vcproj
msvscpp/luksde_test_tools_signal/: luksde_test_tools_signal.vcproj
msvscpp/luksde_test_volume/: luksde_test_volume.vcproj
msvscpp/luksde_test_volume_header/: luksde_test_volume_header.vcproj
msvscpp/luksdeinfo/: luksdeinfo.vcproj
msvscpp/luksdemount/: luksdemount.vcproj
msvscpp/pyluksde/: pyluksde.vcproj
ossfuzz/: Makefile.am  (+3 more)
pyluksde/: Makefile.am  pyluksde.c  pyluksde.h  pyluksde_encryption_chaining_modes.c  pyluksde_encryption_chaining_modes.h  pyluksde_encryption_methods.c  pyluksde_encryption_methods.h  pyluksde_error.c  pyluksde_error.h  pyluksde_file_object_io_handle.c  pyluksde_file_object_io_handle.h  pyluksde_guid.c  pyluksde_guid.h  pyluksde_hashing_methods.c  pyluksde_hashing_methods.h  pyluksde_initialization_vector_modes.c  pyluksde_initialization_vector_modes.h  pyluksde_integer.c  pyluksde_integer.h  pyluksde_libbfio.h  pyluksde_libcerror.h  pyluksde_libclocale.h  pyluksde_libcstring.h  pyluksde_libfguid.h  pyluksde_libluksde.h  pyluksde_python.h  pyluksde_unused.h  pyluksde_volume.c  pyluksde_volume.h  setup.py.in
pyluksde-python2/: Makefile.am
tests/: Makefile.am  luksde_test_diffuser.c  luksde_test_encryption_context.c  luksde_test_error.c  luksde_test_functions.c  luksde_test_functions.h  luksde_test_get_version.c  luksde_test_getopt.c  luksde_test_getopt.h  luksde_test_io_handle.c  luksde_test_key_slot.c  luksde_test_libbfio.h  luksde_test_libcerror.h  luksde_test_libclocale.h  luksde_test_libcnotify.h  luksde_test_libcstring.h  luksde_test_libcsystem.h  luksde_test_libcthreads.h  luksde_test_libluksde.h  luksde_test_libuna.h  luksde_test_macros.h  luksde_test_memory.c  luksde_test_memory.h  luksde_test_notify.c  luksde_test_open_close.c  luksde_test_password.c  luksde_test_read.c  luksde_test_sector_data.c  luksde_test_sector_data_vector.c  luksde_test_seek.c  luksde_test_support.c  luksde_test_tools_info_handle.c  luksde_test_tools_output.c  luksde_test_tools_signal.c  luksde_test_unused.h  luksde_test_volume.c  luksde_test_volume_header.c  pkgbuild.sh  pyluksde_test_get_version.py  pyluksde_test_open_close.py  (+23 more)
tests/data/: key_slot.1  sector_data.1  volume_header.1
(+3 files in other folders)
