include_HEADERS = \
	libluksde.h

pkginclude_HEADERS = \
	libluksde/codepage.h \
	libluksde/definitions.h \
	libluksde/error.h \
	libluksde/extern.h \
	libluksde/features.h \
	libluksde/types.h

EXTRA_DIST = \
	libluksde.h.in \
	libluksde/definitions.h.in \
	libluksde/features.h.in \
	libluksde/types.h.in

DISTCLEANFILES = \
	libluksde.h \
	libluksde/definitions.h \
	libluksde/features.h \
	libluksde/types.h \
	Makefile \
	Makefile.in

