MSVSCPP_FILES = \
	dokan/dokan.vcproj \
	libbfio/libbfio.vcproj \
	libcaes/libcaes.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfguid/libfguid.vcproj \
	libhmac/libhmac.vcproj \
	libluksde/libluksde.vcproj \
	libuna/libuna.vcproj \
	luksde_test_error/luksde_test_error.vcproj \
	luksde_test_key_slot/luksde_test_key_slot.vcproj \
	luksde_test_notify/luksde_test_notify.vcproj \
	luksde_test_read/luksde_test_read.vcproj \
	luksde_test_sector_data/luksde_test_sector_data.vcproj \
	luksde_test_seek/luksde_test_seek.vcproj \
	luksde_test_support/luksde_test_support.vcproj \
	luksde_test_volume/luksde_test_volume.vcproj \
	luksdeinfo/luksdeinfo.vcproj \
	luksdemount/luksdemount.vcproj \
	pyluksde/pyluksde.vcproj \
	libluksde.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

