MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcaes/libcaes.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfcrypto/libfcrypto.vcproj \
	libfguid/libfguid.vcproj \
	libhmac/libhmac.vcproj \
	libluksde/libluksde.vcproj \
	libuna/libuna.vcproj \
	luksde_test_diffuser/luksde_test_diffuser.vcproj \
	luksde_test_encryption_context/luksde_test_encryption_context.vcproj \
	luksde_test_error/luksde_test_error.vcproj \
	luksde_test_io_handle/luksde_test_io_handle.vcproj \
	luksde_test_key_slot/luksde_test_key_slot.vcproj \
	luksde_test_notify/luksde_test_notify.vcproj \
	luksde_test_password/luksde_test_password.vcproj \
	luksde_test_sector_data/luksde_test_sector_data.vcproj \
	luksde_test_sector_data_vector/luksde_test_sector_data_vector.vcproj \
	luksde_test_support/luksde_test_support.vcproj \
	luksde_test_tools_info_handle/luksde_test_tools_info_handle.vcproj \
	luksde_test_tools_output/luksde_test_tools_output.vcproj \
	luksde_test_tools_signal/luksde_test_tools_signal.vcproj \
	luksde_test_volume/luksde_test_volume.vcproj \
	luksde_test_volume_header/luksde_test_volume_header.vcproj \
	luksdeinfo/luksdeinfo.vcproj \
	luksdemount/luksdemount.vcproj \
	pyluksde/pyluksde.vcproj \
	libluksde.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

